Fixing mobile spacing issues

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -18,6 +18,11 @@
             margin-left: auto;
             margin-right: auto;
             width: 40%;
+
+            @media (max-width: 767px) {
+                width: 80%;
+                height: 60%;
+            }
         }
     }
 
