--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -21,8 +21,8 @@
         }
 
         @media (max-width: 767px) {
-            width: 15%;
-            height: 60%;
+            width: 10%;
+            height: 50%;
         }
     }
 
@@ -33,7 +33,7 @@
         align-items: center;
          
         a {
-            width: 15%;
+            width: 20%;
             color: #a82e2e;
             text-decoration: none;
             text-align: center;
@@ -51,13 +51,20 @@
             padding: 0 1.5em;
 
             a {
-                width: auto;
+                width: 20%;
+                font-size: 16px;
             }
         }
 
-        @media (max-width: 374px) {
+        @media (max-width: 450px) {
             a {
-                font-size: 15px;
+                font-size: 12px;
+            }
+        }
+
+        @media (max-width: 340px) {
+            a {
+                font-size: 10px;
             }
         }
     }
